--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,10 @@ VAULT_PASS=your_vault_password
 # Environment
 NODE_ENV=development
 TEST_MODE=false
+
+# Security Configuration
+# Comma-separated list of allowed origins for CORS
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://yourdomain.com
+
+# IMPORTANT: Change these in production!
+# Generate strong random values for production use
