--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,24 @@ TEST_MODE=false
 
 # Security Configuration
 # Comma-separated list of allowed origins for CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://yourdomain.com
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173,https://yourdomain.com
+
+# Security Configuration
+# Minimum password length (12 is recommended)
+MIN_PASSWORD_LENGTH=12
+
+# Rate limiting configuration
+MAX_LOGIN_ATTEMPTS=5
+LOCK_DURATION_MINUTES=30
+MAX_IP_ATTEMPTS_PER_15MIN=10
+
+# JWT Token expiration times (in seconds)
+ACCESS_TOKEN_EXPIRY=900    # 15 minutes
+REFRESH_TOKEN_EXPIRY=604800 # 7 days
+
+# Session configuration
+MAX_ACTIVE_SESSIONS_PER_USER=5
 
 # IMPORTANT: Change these in production!
 # Generate strong random values for production use
+# Use: openssl rand -base64 32 for JWT_SECRET and ENCRYPTION_KEY
